Hopefully fixes width of the background on mobile.

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p#slogan {
 
 .product-background { 
 	background: #FF2D55;
+	width: 100%;
 }
 
 .clear {
